--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
     android:orientation="vertical"
+    android:paddingStart="32dp"
+    android:paddingEnd="32dp"
     tools:context=".ui.login.LoginFragment"
     tools:ignore="HardcodedText">
 
@@ -15,10 +16,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/semi_transparent"
         android:layout_marginTop="264dp"
-        android:layout_marginEnd="32dp"
         android:hint="E-mail">
 
         <!--this is the actual edit text which takes the input-->
@@ -34,16 +33,16 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/semi_transparent"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="32dp"
-        android:hint="Password">
+        android:hint="Password"
+        >
 
         <!--this is the actual edit text which takes the input-->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/enterPassword"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -53,10 +52,16 @@
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="32dp"
         android:text="@string/login" />
+
+    <Button
+        android:id="@+id/signUpBtn"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/signUp">
+    </Button>
 
 
 </LinearLayout>
