--- a/app/src/main/res/layout/login_nav_section.xml
+++ b/app/src/main/res/layout/login_nav_section.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="160dp"
     android:orientation="horizontal"
     android:layout_marginTop="20dp">
 
     <ImageView
-        android:id="@+id/userPhoto"
+        android:id="@+id/emptyUserPhoto"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:contentDescription="@string/account_image"
