--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="colorDarkGrey">#D1D1D1</color>
     <color name="checkbox">#0050B3</color>
 
+    <color name="semi_transparent">#2F000000</color>
+
     //account colors
     <color name="red">#d50000</color>
     <color name="green">#1b5e20</color>
