--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="toolbar_orange">#f5a255</color>
     <color name="colorDarkGrey">#D1D1D1</color>
     <color name="checkbox">#0050B3</color>
+    <color name="duskyYellow">#f9d612</color>
 
     <color name="semi_transparent">#2F000000</color>
 
