--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/grey_font</item>
+        <item name="colorControlActivated">@color/duskyYellow</item>
+    </style>
+
 
     <style name="Theme.TeachUaV20.Button">
         <item name="android:background">@color/toolbar_orange</item>
