FIXED clubs icon, and this is final version for this repository

--- a/app/src/main/res/drawable/ic_clubs_icon.xml
+++ b/app/src/main/res/drawable/ic_clubs_icon.xml
@@ -1,11 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="200dp"
-    android:height="200dp"
-    android:viewportWidth="1000"
-    android:viewportHeight="1000">
-
-    <path
-        android:fillColor="#000000"
-        android:pathData="M 908 640 h -104 v -152 c 0 -4.4 -3.6 -8 -8 -8 h -248 v -96 h 108 c 8.8 0 16 -7.2 16 -16 v -288 c 0 -8.8 -7.2 -16 -16 -16 h -288 c -8.8 0 -16 7.2 -16 16 v 288 c 0 8.8 7.2 16 16 16 h 108 v 96 h -248 c -4.4 0 -8 3.6 -8 8 v 152 h -104 c -8.8 0 -16 7.2 -16 16 v 288 c 0 8.8 7.2 16 16 16 h 288 c 8.8 0 16 -7.2 16 -16 v -288 c 0 -8.8 -7.2 -16 -16 -16 h -112 v -88 h 440 v 88 h -112 c -8.8 0 -16 7.2 -16 16 v 288 c 0 8.8 7.2 16 16 16 h 288 c 8.8 0 16 -7.2 16 -16 v -288 c 0 -8.8 -7.2 -16 -16 -16 z m -564 76 v 168 h -168 v -168 h 168 z m 84 -408 v -168 h 168 v 168 h -168 z m 420 576 h -168 v -168 h 168 v 168 z" />
+    android:width="824dp"
+    android:height="896dp"
+    android:viewportWidth="824"
+    android:viewportHeight="896">
+  <path
+      android:pathData="M808,576L704,576L704,424c0,-4.4 -3.6,-8 -8,-8L448,416v-96h108c8.8,0 16,-7.2 16,-16L572,16c0,-8.8 -7.2,-16 -16,-16L268,0c-8.8,0 -16,7.2 -16,16v288c0,8.8 7.2,16 16,16h108v96L128,416c-4.4,0 -8,3.6 -8,8v152L16,576c-8.8,0 -16,7.2 -16,16v288c0,8.8 7.2,16 16,16h288c8.8,0 16,-7.2 16,-16L320,592c0,-8.8 -7.2,-16 -16,-16L192,576v-88h440v88L520,576c-8.8,0 -16,7.2 -16,16v288c0,8.8 7.2,16 16,16h288c8.8,0 16,-7.2 16,-16L824,592c0,-8.8 -7.2,-16 -16,-16zM244,652v168L76,820L76,652h168zM328,244L328,76h168v168L328,244zM748,820L580,820L580,652h168v168z"
+      android:fillColor="#000000"/>
 </vector>
